--- a/index.html
+++ b/index.html
@@ -2,62 +2,64 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Gerador de Recibos - Daniela Ramos Oliveira</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1>Gerador de Recibos</h1>
-            <p>Daniela Ramos Oliveira - Instrumentação Cirúrgica</p>
-        </div>
+        <header>
+            <h1>Gerador de Recibos Médicos</h1>
+            <p class="subtitle">Daniela Ramos Oliveira - Instrumentação Cirúrgica</p>
+            <div id="device-info" class="device-badge"></div>
+        </header>
 
-        <div class="content">
+        <form id="receipt-form">
             <div class="form-section">
-                <h2>Dados do Recibo</h2>
-
-                <div class="checkbox-container">
-                    <input type="checkbox" id="acompanhado" onchange="toggleResponsavel()">
-                    <label for="acompanhado">Acompanhado</label>
+                <div class="form-group checkbox-group">
+                    <label>
+                        <input type="checkbox" id="acompanhado" onchange="toggleResponsavel()">
+                        <span>Acompanhado (menor de idade ou paciente com responsável)</span>
+                    </label>
                 </div>
 
-                <div id="responsavel-section" style="display: none;">
-                    <div class="form-group">
-                        <label for="nomeResponsavel">Nome do Responsável:</label>
-                        <input type="text" id="nomeResponsavel" placeholder="Digite o nome do responsável" oninput="updatePreview()">
-                    </div>
+                <div class="form-group" id="responsavel-group" style="display: none;">
+                    <label for="nome-responsavel">Nome do Responsável:</label>
+                    <input type="text" id="nome-responsavel" placeholder="Digite o nome completo do responsável" oninput="updatePreview()" autocomplete="off">
                 </div>
 
-                <div class="form-group">
-                    <label for="cpf" id="cpfLabel">CPF:</label>
-                    <input type="text" id="cpf" placeholder="000.000.000-00" maxlength="14" oninput="formatCPF(this); updatePreview()">
+                <div class="form-group" id="cpf-group">
+                    <label for="cpf" id="cpf-label">CPF:</label>
+                    <input type="text" id="cpf" placeholder="000.000.000-00" maxlength="14" oninput="formatCPF(this); updatePreview()" inputmode="numeric" autocomplete="off">
                 </div>
 
                 <div class="form-group">
                     <label for="nome">Nome do Paciente:</label>
-                    <input type="text" id="nome" placeholder="Digite o nome do paciente" oninput="updatePreview()">
+                    <input type="text" id="nome" placeholder="Digite o nome completo do paciente" oninput="updatePreview()" autocomplete="off">
                 </div>
 
                 <div class="form-group">
                     <label for="valor">Valor (R$):</label>
-                    <input type="text" id="valor" placeholder="200,00" oninput="formatValor(this); updatePreview()">
+                    <input type="text" id="valor" placeholder="0,00" oninput="formatValor(this); updatePreview()" inputmode="decimal" autocomplete="off">
                 </div>
 
                 <div class="form-group">
                     <label for="cirurgia">Tipo de Cirurgia:</label>
-                    <input type="text" id="cirurgia" placeholder="Ex: ADENOAMIGDALECTOMIA" oninput="updatePreview()">
+                    <input type="text" id="cirurgia" placeholder="Ex: ADENOAMIGDALECTOMIA" oninput="updatePreview()" autocomplete="off">
                 </div>
 
                 <div class="form-group">
                     <label for="hospital">Hospital:</label>
-                    <input type="text" id="hospital" placeholder="Ex: UNIMED" oninput="updatePreview()">
+                    <input type="text" id="hospital" placeholder="Ex: UNIMED" oninput="updatePreview()" autocomplete="off">
                 </div>
 
                 <div class="form-group">
                     <label>Data:</label>
                     <div class="date-group">
-                        <input type="number" id="dia" placeholder="Dia" min="1" max="31" oninput="updatePreview()" onblur="formatDia(this)">
+                        <input type="number" id="dia" placeholder="Dia" min="1" max="31" oninput="updatePreview()" inputmode="numeric">
                         <select id="mes" onchange="updateDayLimit(); updatePreview()">
                             <option value="">Mês</option>
                             <option value="JANEIRO">Janeiro</option>
@@ -92,48 +94,31 @@
                     <div class="receipt-body" id="receipt-text">
                         Recebi de <strong>********************************</strong>, <strong>CPF.: ***.***.***-**</strong> o valor de <strong>R$ ***,**</strong> referente ao serviço prestado da instrumentação cirúrgica para cirurgia de <strong>*******************</strong>, realizada no hospital <strong>**********</strong>.
                     </div>
-                    <div class="receipt-location" id="receipt-location">Juiz de Fora, ** de ********** de 2025</div>
+                    <div class="receipt-location">Juiz de Fora, ** de ********** de ****</div>
                     <div class="receipt-signature">
-                        <div>Daniela Ramos Oliveira</div>
-                        <div>CPF 088.959.546-10</div>
+                        <div class="signature-line"></div>
+                        <div class="signature-name">Daniela Ramos Oliveira</div>
+                        <div class="signature-cpf">CPF.: 088.959.546-10</div>
                     </div>
                 </div>
             </div>
 
-            <div class="loading" id="loading">
-                <div class="spinner"></div>
-                <p>Gerando PDF...</p>
-            </div>
-
-            <div class="btn-container">
-                <button class="btn btn-primary" onclick="showConfirmation()">Gerar PDF</button>
-                <button class="btn btn-secondary" onclick="clearForm()">Limpar Formulário</button>
-            </div>
-        </div>
+            <button type="button" class="btn-generate" onclick="showModal()">Gerar Recibo em PDF</button>
+        </form>
     </div>
 
     <!-- Modal de Confirmação -->
     <div id="confirmModal" class="modal">
         <div class="modal-content">
-            <h3>⚠️ Revisar Informações</h3>
-            <p style="font-family: Arial, sans-serif; margin-bottom: 20px;">Por favor, revise cuidadosamente todas as informações antes de gerar o PDF:</p>
-            
-            <div class="modal-preview" id="modalPreview">
-                <!-- Conteúdo será preenchido dinamicamente -->
-            </div>
-
-            <p style="font-family: Arial, sans-serif; font-size: 0.95em; color: #666; margin-top: 20px;">
-                <strong>Atenção:</strong> Certifique-se de que todos os dados estão corretos antes de confirmar.
-            </p>
-
+            <h2>Confirme os dados do recibo</h2>
+            <div id="modal-preview"></div>
             <div class="modal-buttons">
-                <button class="btn btn-secondary" onclick="closeModal()">Voltar e Corrigir</button>
-                <button class="btn btn-primary" onclick="confirmAndGenerate()">Confirmar e Gerar PDF</button>
+                <button onclick="closeModal()" class="btn-cancel">Cancelar</button>
+                <button onclick="generatePDF()" class="btn-confirm">Confirmar e Gerar PDF</button>
             </div>
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
