--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <input type="text" id="cpf" placeholder="000.000.000-00" maxlength="14" oninput="formatCPF(this); updatePreview()" inputmode="numeric" autocomplete="off">
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" id="nome-group">
                     <label for="nome">Nome do Paciente:</label>
                     <input type="text" id="nome" placeholder="Digite o nome completo do paciente" oninput="updatePreview()" autocomplete="off">
                 </div>
